fjla Despliegue en Heroku

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
+header, nav, section {background:#eee; text-align: center; color:#00F};
 a {
   color: #00B7FF;
 }
