--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
-  </head>
-  <body>
-    <h1><%= title %></h1>
+
+
     <p>Bienvenido a <%= title %></p>
 	<p>El más costoso sistema para hacer preguntas de la nueva web (eso sí, muy rápido).</p>
-  </body>
-</html>
+	
+	<p>Su primera pregunta... <a href="/quizes/question">Comenzamos</a></p>
+
