Despliegue en Heroku fjla

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,7 @@
 
   <nav class="main" id="n1" role="navigation">
   <img src="/images/Questions-Awnser.jpg" width="100px"/>
-    <span><a href="/">Inicio</a></span> ||
+    <span><a href="https://fjla-quiz-2015.herokuapp.com/">Inicio</a></span> ||
     <span><a href="/quizes/question">Preguntas</a></span> ||
     <span><a href="/author">Créditos</a></span>
 	</nav>
@@ -40,7 +40,7 @@
   </section>
 
   <footer class="main" id="f1" style="background-color:#EEE;">
-    <a href="https://fjla-quiz-2015.herokuapp.com/">
+    <a href="https://github.com/fjla-curso/fjlozano-quiz">
       La raíz de mi proyecto GitHub</a>
 	   || <span><a href="http://es.wikipedia.org/iki/Quiz">¿Qué es eso de un Quiz?</a></span>
   </footer>		
