Despliegue en Heroku fjla

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,8 +40,8 @@
   </section>
 
   <footer class="main" id="f1" style="background-color:#EEE;">
-    <a href="https://github.com/fjla-curso/fjlozano-quiz">
-      La raíz de mi proyecto GitHub</a>
+    <a href="https://github.com/fjla-curso/fjlozano-quiz-2015">
+      Comparto mi proyecto nodejs en GitHub</a>
 	   || <span><a href="http://es.wikipedia.org/iki/Quiz">¿Qué es eso de un Quiz?</a></span>
   </footer>		
 	
