nuevos campos bd quiz ok

--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -1,6 +1,6 @@
 ﻿
   
-
+<p>Marchando una pregunta de  <b><%= eltema %></b>, de <b>dificultad <%= ladificultad %>/3</b>. </p>
     <form method="get" action="/quizes/answer">
 	  Pregunta: <%= pregunta %> </p>
 	  <input type="text" name="respuesta" value"Escriba aquí"/>
