--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -2,5 +2,6 @@
 <p>	  Y...: <%= respuesta %> </p>
 	  
 
-	<a href="/quizes/question"> Intentalo otra vez, por favor </a>
+	  <p>Aprende:  es el parámetro del quiz_controller el que aparece aquí: <%= title %></p>
+	<a href="/quizes/question"> Inténtalo otra vez, por favor </a>
 
