ya consulta varias preg bd quiz

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,5 @@
     <p>Bienvenido a <%= title %></p>
 	<p>El más costoso sistema para hacer preguntas de la nueva web (eso sí, muy rápido).</p>
 	
-	<p>Su primera pregunta... <a href="/quizes/question">Comenzamos</a></p>
+	<p>Su primera pregunta... <a href="/quizes">Comenzamos</a></p>
 
