Todo mod.7 hasta autoload MW

--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -2,6 +2,6 @@
 <p>	  Y...: <%= respuesta %> </p>
 	  
 
-	  <--<p>Aprende:  es el parámetro del quiz_controller el que aparece aquí: <%= title %></p>-->
+	  <!--<p>Aprende:  es el parámetro del quiz_controller el que aparece aquí: <%= title %></p>-->
 	<a href="/quizes/<%= quiz.id %>"> Volver </a>
 
