--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,7 +2,8 @@
 <% var i; for (i= 0; i< quizes.length; i++) {  %>
  <tr><td>
  <a href="quizes/<%= quizes[i].id %>">
- <%= quizes [i].pregunta %>
+ <%= quizes [i].pregunta %> </td><td><i>(<%= quizes[i].tema %>)</i>
  </a></td></tr>
 <% } %>
 </table>
+<p><a href="/quizes/new"><button type="button">Crear pregunta</button></a></p>
