Varios campos, añade y borra

--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,5 +1,5 @@
 ﻿ 
-<p>	  Y...: <%= respuesta %> </p>
+<h2>	  <%= respuesta %> </h2>
 	  
 
 	  <!--<p>Aprende:  es el parámetro del quiz_controller el que aparece aquí: <%= title %></p>-->
