--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,9 +1,19 @@
 <table>
 <% var i; for (i= 0; i< quizes.length; i++) {  %>
- <tr><td>
+ <tr>
+ <td>
  <a href="quizes/<%= quizes[i].id %>">
  <%= quizes [i].pregunta %> </td><td><i>(<%= quizes[i].tema %>)</i>
- </a></td></tr>
+ </a></td>
+  <td>
+ <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+   <button type="submit" onClick="return confirm('Borrar la pregunta: <%= quizes[i].pregunta %>');">
+   borrar
+   </button>
+ </form>
+ </td>
+
+ </tr>
 <% } %>
 </table>
 <p><a href="/quizes/new"><button type="button">Crear pregunta</button></a></p>
