--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,10 +1,43 @@
+<div name="filtros" style="background:#AA5;padding:3px">
+<p>Filtro de preguntas
+</p>
+<form method="get"  action="/quizes">
 <table>
+<tr><td>Texto de la pregunta <br/>(admite varias palabras en el orden de aparición)</td><td>Tema</td><td>Dificultad</td></tr>
+<tr><td>
+    
+	 <input type="text" id="search" name="search" value""/>
+	  
+	  </td><td>
+	  
+	  <select name="searchTema">
+	  <option value="" selected>-</option>
+  <option value="Otro" >Otro</option>
+  <option value="Humanidades">Humanidades</option>
+  <option value="Ocio">Ocio</option>
+  <option value="Ciencia">Ciencia</option>
+  <option value="Tecnología">Tecnología</option>
+  <option value="Geografía">Geografía</option>
+  </select>
+	  </td>
+	  <td>
+	    <select name="searchdificultad">
+  <option value="" selected>Cualquiera</option>
+  <option value="1">Fácil</option>
+  <option value="2">Normal</option>
+  <option value="3">Difícil</option>
+  </select>
+	  </td>
+	  <td><input type="submit" value="Filtrar"></td></tr></table></form>
+</div>
+	  <table>
 <% var i; for (i= 0; i< quizes.length; i++) {  %>
  <tr>
  <td>
  <a href="quizes/<%= quizes[i].id %>">
- <%= quizes [i].pregunta %> </td><td><i>(<%= quizes[i].tema %>)</i>
- </a></td>
+ <%= quizes [i].pregunta %> </a></td><td><i>(<%= quizes[i].tema %>)</i>
+ </td><td><%= quizes[i].dificultad %>
+ </td>
   <td>
  <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
    <button type="submit" onClick="return confirm('Borrar la pregunta: <%= quizes[i].pregunta %>');">
