--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -7,10 +7,20 @@
 	  <input type="submit" value="Enviar">
 	  </form>
 	  <p>&nbsp;</p>
-<div style="background-color:#777">
-<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>	  
+<div style="background-color:#CCA">
+
+<p><br/><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>	  
+
+
 <h3>Comentarios:</h3>
 <% for(index in quiz.comments) { %>
-<p> - <%= quiz.comments[index].texto %>
+ 	<%if(quiz.comments[index].publicado  || session.user ) { %>  
+		<p> - <%= quiz.comments[index].texto %>
+		   <% if (session.user && ! quiz.comments[index].publicado) { %> 
+				<a href="/quizes/<%=quiz.id%>/comments/<%=quiz.comments[index].id%>/publish">
+				 <button>Publicar</button></a> 
+		   <% } %> 
+		</p>
+	<% } %> 
 <% } %>
 </div>
