Ejer mod 9 mas campos comentarios

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,8 +35,8 @@
 
   <nav class="main" id="n1" role="navigation">
   <img src="/images/Questions-Awnser.jpg" width="80px"/>
-    <span><a href="https://fjla-quiz-2015.herokuapp.com/">Inicio</a></span> |
-    <span><a href="/quizes">Preguntas</a></span> |
+    <span><a href="https://fjla-quiz-2015.herokuapp.com/">Inicio</a></span> 
+    <span><a href="/quizes">Preguntas</a></span> 
     <span><a href="/author">Créditos</a></span>
 	</nav>
 
